--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,4 +45,4 @@ workflows:
           filters:            
             branches:
               only:
-                - cicd-test-1
+                - cicd-demo-dev
