--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,15 @@ jobs:
       - run:
           name: Test
           command: pytest
+      - run:
+          name: Create Zipfile archive of Dependencies
+          command: |
+            cd env/lib/python3.7/site-packages
+            zip -r9 ../../../../function.zip .
+      - run:
+          name: Add App to Zipfile
+          command: zip -g ./function.zip .env -r app
+      
       
   
   deploy-dev: 
