--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,7 +30,10 @@ jobs:
       - run:
           name: Add App to Zipfile
           command: zip -g ./function.zip .env -r app
-      
+      - persist_to_workspace:
+          root: .
+          paths:
+            - function.zip
       
   
   deploy-dev: 
@@ -44,17 +47,26 @@ jobs:
           aws-secret-access-key: AWS_SECRET_ACCESS_KEY
       - run:
           name: Upload to S3        
-          command: aws s3 cp function.zip s3://cicd-test-1/function.zip
+          command: aws s3 cp function.zip s3://fastapi-itnasbucket/function.zip
       - run:        
           name: Deploy new Lambda        
-          command: aws lambda update-function-code --function-name cicd-test-1 --s3-bucket cicd-test-1 --s3-key function.zip
+          command: aws lambda update-function-code --function-name CICD-Test1 --s3-bucket fastapi-itnasbucket --s3-key function.zip
 
     
 workflows:  
   build-test-and-deploy:    
     jobs:      
       - build-and-test:
+          context: ccid-demo-dev
           filters:            
+            branches:
+              only:
+                - cicd-demo-dev
+      - deploy-dev:
+          context: ccid-demo-dev
+          requires:
+            - build-and-test    
+          filters:        
             branches:
               only:
                 - cicd-demo-dev
