--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,13 +57,13 @@ workflows:
   build-test-and-deploy:    
     jobs:      
       - build-and-test:
-          context: ccid-demo-dev
+          context: cicd-demo-dev
           filters:            
             branches:
               only:
                 - cicd-demo-dev
       - deploy-dev:
-          context: ccid-demo-dev
+          context: cicd-demo-dev
           requires:
             - build-and-test    
           filters:        
